--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".activities.MainActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_main_screen"
+        android:id="@+id/rv_home_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/app_bg"
